Checkpoint -- virtual inst table, but still sluggish